test_regress/t/t_assert_unique_case_bad.out
match_item0
match_item0
match_item0
match_item0
match_item0
match_item0
match_item0
match_item0
match_item0
[90] %Error: t_assert_unique_case_bad.v:36: Assertion failed in top.t: unique case, but multiple matches found
%Error: t/t_assert_unique_case_bad.v:36: Verilog $stop
Aborting...
